--- a/my-app/src/components/LoginForm/index.css
+++ b/my-app/src/components/LoginForm/index.css
@@ -7,20 +7,19 @@
     width: 90%;
     max-width: 1110px;
     margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   
   @media screen and (min-width: 992px) {
     .login-form-container {
       flex-direction: row;
       justify-content: space-around;
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
   
-  .login-website-logo-mobile-image {
-    width: 165px;
-    margin-top: 50px;
-    margin-bottom: 35px;
-  }
   
   @media screen and (min-width: 992px) {
     .login-website-logo-mobile-image {
