--- a/my-app/src/components/NotFound/index.css
+++ b/my-app/src/components/NotFound/index.css
@@ -1,8 +1,8 @@
 .whiteBgColor {
-    background-color: #ffffff;
+    background-color: #b1b1b1;
   }
   .blackColor {
-    color: #000000;
+    color: #fdfdfd;
   }
   .notFound-container {
     display: flex;
