--- a/my-app/src/components/Home/index.css
+++ b/my-app/src/components/Home/index.css
@@ -6,28 +6,27 @@ body{
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-top: 0px;
-  min-height: 110vh;
-  background-image: url("https://images.unsplash.com/photo-1573848953384-3be02021eb0b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
-  background-size:cover ;
+  min-height: 100vh;
+  background-color: #8a888d;
   width:100%;
 }
 .home-heading{
-  font-size: 20px;
+  font-size: 24px;
   font-weight:500;
   font-family: "Roboto";
-  color: #827d8c;
-  border-radius: 2px;
+  color: #141316;
   margin-top: 5px;
   outline: none;
+  width:110%;
 }
 .home-form-container {
- margin:50px;
+  margin-top: 50px;
+  margin-right: 30px;
  background-color: transparent;
   }
   
-  @media screen and (min-width: 639px) {
-    .home-form-container {
+  @media screen and (min-width: 640px) {
+    .home-form-Details-container {
       margin:150px;
       background-color: transparent;
     }
@@ -38,24 +37,38 @@ body{
       font-size: 40px;
       font-weight:600;
     }
+    .home-container{
+      background-image: url("https://images.unsplash.com/photo-1573848953384-3be02021eb0b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+      background-size:cover ;
+      min-height: 100vh;
+      width:100%;
+    }
   }
   
-  .form-container {
+  .form-Details-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
     border-radius: 8px;
-    background-color: transparent;
+    background-color:transparent;
     width: 100%;
   }
   
   @media screen and (min-width: 992px) {
-    .form-container {
+    .form-Details-container {
       width: 350px;
       flex-shrink: 0;
       padding: 64px 48px 64px 48px;
       background-color: transparent;
+    }
+    .home-heading{
+      font-size: 40px;
+      font-weight:500;
+      font-family: "Roboto";
+      color: #827d8c;
+      margin-top: 5px;
+      outline: none;
     }
   }
   
@@ -68,10 +81,10 @@ body{
   
   .home-input-label {
     margin-bottom: 0px;
-  font-weight: 600;
-    font-size: 26px;
+  font-weight: 500;
+    font-size: 18px;
     text-align: left;
-    width:85%;
+    width:80%;
     color: #141f30;
     padding-top:10px;
     padding-bottom: 10px;
@@ -89,28 +102,16 @@ body{
     outline: none;
   }
   
-  .password-input-field {
-    font-size: 14px;
-    height: 40px;
-    border: 1px solid #d7dfe9;
-    background-color: transparent;
-    color: #64748b;
-    border-radius: 2px;
-    margin-top: 5px;
-    padding: 8px 16px 8px 16px;
-    outline: none;
-  }
-  
-  .login-button {
+  .submit-button {
     font-family: 'Roboto';
     font-weight: bold;
     font-size: 14px;
     color: #ffffff;
     height: 40px;
-    width: 20%;
+    width: 24%;
     margin-top: 20px;
     margin-bottom: 2px;
-    background-color: #0b69ff;
+    background-color: #3c4149e1;
     border-radius: 8px;
     border: none;
     outline: none;
