--- a/my-app/src/components/UserCard/index.css
+++ b/my-app/src/components/UserCard/index.css
@@ -1,82 +1,45 @@
-.link-item {
-    text-decoration: none;
-    margin-bottom: 48px;
-    width: 350px;
-    flex-grow: 0;
-    flex-shrink: 1;
-    margin-right: 20px;
-    margin:40px;
-  }
-  
-  @media screen and (min-width: 768px) and (max-width: 991px) {
-    .link-item {
-      width: 300px;
-    }
-  }
-  
   .product-item {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color:hsla(0, 0%, 35%, 0.796) ;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 10px;
+  }
+  .list-card{
+    display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    margin: 10px;
   }
-  
-  .thumbnail {
-    width: 100%;
-    max-height: 350px;
-    border-radius: 6px;
-  }
-  
   .title {
-    color: #171f46;
+    color: #ffffff;
     font-family: 'Roboto';
-    font-size: 24px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 600;
     margin-top: 20px;
     margin-bottom: 8px;
   }
   
-  .brand {
-    color: #594d6d;
-    font-family: 'Roboto';
-    font-size: 18px;
-    margin-bottom: 6px;
-  }
-  
-  .product-details {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-top: 2px;
-  }
-  
-  .price {
-    color: #171f46;
-    font-family: 'Roboto';
-    font-size: 18px;
-    font-weight: 700;
-    margin: 0;
-  }
-  
-  .rating-container {
-    display: flex;
-    align-items: center;
-    background-color: #3b82f6;
-    border-radius: 6px;
-    padding: 6px 16px;
-  }
-  
-  .rating {
-    color: #ffffff;
+  .data {
+    color: #d4d1da;
     font-family: 'Roboto';
     font-size: 16px;
-    font-weight: 500;
-    margin-right: 4px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 8px;
   }
-  
-  .star {
-    height: 20px;
-    width: 20px;
-    margin-bottom: 3px;
+  .btn-title{
+    color: #ffffff;
+    font-family: 'Roboto';
+    font-size: 30px;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 8px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
   }
-  
