--- a/my-app/src/components/LoginForm/index.css
+++ b/my-app/src/components/LoginForm/index.css
@@ -107,14 +107,14 @@
     margin-top: 5px;
     padding: 8px 16px 8px 16px;
     outline: none;
-    background-color: #d3d3d3;
+    background-color: #ddd9d9;
   }
   
   .password-input-field {
     font-size: 14px;
     height: 40px;
     border: 1px solid #d7dfe9;
-    background-color: #d1d1d1;
+    background-color: #ddd9d9;
     color: #64748b;
     border-radius: 2px;
     margin-top: 5px;
