--- a/my-app/src/components/UserDetails/index.css
+++ b/my-app/src/components/UserDetails/index.css
@@ -7,7 +7,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     background-image: url("https://images.unsplash.com/photo-1532210317995-cc56d90177d9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fGJhY2tncm91bmR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
   }
   .user-list{
@@ -18,6 +18,7 @@
     flex-wrap:wrap;
     min-height: 100vh;
     width: 80%;
+
   }
   @media screen and (min-width: 639px) {
     .user-form-container {
@@ -26,10 +27,20 @@
       justify-content: flex-start;
       align-items: flex-start;
       height: 100vh;
-      width: 100%;
+      width: 100vw;
       background-image: url("https://images.unsplash.com/photo-1532210317995-cc56d90177d9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fGJhY2tncm91bmR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
   background-size: stretch;
   background-repeat: initial;
+    }
+    .user-list{
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap:wrap;
+      min-height: 100vh;
+      margin-left:6%;
+      width:80%;
     }
   }
 
